--- a/ProyectoSGIO/ProyectoSGIO/ProyectoSGIO.csproj
+++ b/ProyectoSGIO/ProyectoSGIO/ProyectoSGIO.csproj
@@ -146,6 +146,8 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="root\css\Layout_Externo.css" />
+    <Content Include="root\css\diseño.css" />
     <Content Include="root\css\styles.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -175,21 +177,28 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutExterno.cshtml" />
+    <Content Include="Views\Home\Registro.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Portafolio.cshtml" />
+    <Content Include="Views\Home\PortafolioItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="root\img\" />
     <Folder Include="root\js\" />
-    <Folder Include="Views\Módulo Administrativo\" />
-    <Folder Include="Views\Módulo Comunicación y Colaboración\" />
-    <Folder Include="Views\Módulo Contabilidad\" />
-    <Folder Include="Views\Módulo Gestión de Inventario\" />
-    <Folder Include="Views\Módulo Gestión de Maquinaria\" />
-    <Folder Include="Views\Módulo Gestión de RH\" />
-    <Folder Include="Views\Módulo Planificación\" />
-    <Folder Include="Views\Módulo Proveedores\" />
-    <Folder Include="Views\Módulo Reportes y Análisis\" />
-    <Folder Include="Views\Módulo Seguimiento de Proyectos\" />
+    <Folder Include="Views\Login\" />
+    <Folder Include="Views\Módulos\Administrativo\" />
+    <Folder Include="Views\Módulos\Comunicación y Colaboración\" />
+    <Folder Include="Views\Módulos\Contabilidad\" />
+    <Folder Include="Views\Módulos\Gestión de Inventario\" />
+    <Folder Include="Views\Módulos\Gestión de Maquinaria\" />
+    <Folder Include="Views\Módulos\Gestión de RH\" />
+    <Folder Include="Views\Módulos\Planificación\" />
+    <Folder Include="Views\Módulos\Proveedores\" />
+    <Folder Include="Views\Módulos\Reportes y Análisis\" />
+    <Folder Include="Views\Módulos\Seguimiento de Proyectos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
