--- a/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
+++ b/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
@@ -58,4 +58,12 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
