--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CadenaSQL": "Data Source=(local);Initial Catalog=DBSGIO;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
