--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Data Source=(local);Initial Catalog=DBSGIO;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Server=LeonardoCZ\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
