--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Server=XESTRADA;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Server=LEONARDOCZ\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
