--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CadenaSQL": "Server=XESTRADA;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
+  "EmailSettings": {
+    "FromEmail": "your-email@example.com",
+    "FromName": "Your Application Name",
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "your-username",
+    "SmtpPassword": "your-password"
+    }
   }
-}
