Commit de los tickets #23 y #8
Se añade la lógica para poder recuperar la contraseña y también registrar horas extras de los empleados.

--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -7,15 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Server=XESTRADA;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Server=ElfafoLaptop\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
   },
 
   "EmailSettings": {
-    "FromEmail": "your-email@example.com",
-    "FromName": "Your Application Name",
-    "SmtpServer": "smtp.example.com",
+    "FromEmail": "tu_correo@example.com",
+    "FromName": "Tu Nombre",
+    "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "SmtpUsername": "your-username",
-    "SmtpPassword": "your-password"
-    }
+    "SmtpUsername": "tu_usuario",
+    "SmtpPassword": "tu_contraseña",
+    "EnableSsl": true
   }
+}
