--- a/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
+++ b/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
@@ -116,8 +116,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+    <PackageReference Include="bootstrap" Version="5.3.3" />
+    <PackageReference Include="EPPlus" Version="7.4.0" />
+    <PackageReference Include="itext7" Version="8.0.5" />
+    <PackageReference Include="jQuery.Validation" Version="1.21.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
