--- a/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
+++ b/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
@@ -2,9 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\lib\**" />
+    <Content Remove="Controllers\lib\**" />
+    <EmbeddedResource Remove="Controllers\lib\**" />
+    <None Remove="Controllers\lib\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="Scripts\bootstrap.bundle.js" />
@@ -56,6 +63,15 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
