--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Server=LEONARDOCZ\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Server=GERAR\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "settings": {
+    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR",
+    "correoSMTP": "gmora60255@ufide.ac.cr",
+    "claveSMTP": "Gera115860255"
   }
+
 }
