--- a/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
+++ b/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
@@ -67,6 +67,7 @@
 
   <ItemGroup>
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="EPPlus" Version="6.2.0" />
     <PackageReference Include="itext7" Version="8.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
