Squashed commit of the following:
commit de9cd96a403b96d5c429745637b97a352f00f2da
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Wed Oct 30 17:47:21 2024 -0600

    Correccion AppDBContext

commit fa1d34023e4186e09b2540ba7f1acbaf1a8c7060
Merge: f613707 5d7ddee
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Oct 30 17:23:46 2024 -0600

    Merge pull request #92 from XGuadamuz/Gerardo-Sprint-2

    Arreglo a crear usuario

commit 5d7ddeeec78b46e34741033fba036aa8e07e9c0c
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Oct 30 17:23:19 2024 -0600

    Arreglo a crear usuario

commit f613707b209ecf58da373e90ab19b7be27d4fc1b
Merge: 9f9def9 133c82e
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Oct 30 13:54:37 2024 -0600

    Merge pull request #91 from XGuadamuz/Gerardo-Sprint-2

    Se agrega autenticacion de 2 factores

commit 133c82e5b9da40c1a41eb8ed2e94d8d282ac429c
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Oct 30 13:54:11 2024 -0600

    Se agrega autenticacion de 2 factores

commit 9f9def99f5a96d5f3c25537b814e15bcf3770051
Merge: 9289d25 cddf3f2
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Oct 30 09:27:09 2024 -0600

    Merge pull request #90 from XGuadamuz/Gerardo-Sprint-2

    Se agrega recuperar contraseña

commit cddf3f2274a8c99d6106f68fdc8d6ba63a22fa5a
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Oct 30 09:21:32 2024 -0600

    Arreglo a usuarios default

commit 94a758bdf510ca434dfe5eea2656f48147363a7c
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Oct 30 09:19:59 2024 -0600

    Cambiar Contraseña

commit 9289d256ce46e992481efd10a9bc5bfb3937888e
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Tue Oct 29 22:50:08 2024 -0600

    Squashed commit of the following:

    commit 0e3568c958d54983f76d95dae9c61a8441d1f999
    Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
    Date:

--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CadenaSQL": "Server=XESTRADA;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "settings": {
+    "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR",
+    "correoSMTP": "gmora60255@ufide.ac.cr",
+    "claveSMTP": "Gera115860255"
   }
+
 }
