--- a/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
+++ b/ProyectoSGIO/ProyectoSGIOCore/ProyectoSGIOCore.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="EPPlus" Version="6.2.0" />
     <PackageReference Include="itext7" Version="8.0.5" />
