--- a/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
+++ b/ProyectoSGIO/ProyectoSGIOCore/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Server=ELFAFOPC\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Server=ELFAFOLAPTOP\\SQLEXPRESS;Database=DBSGIO;Integrated Security=True;TrustServerCertificate=True;"
   },
   "settings": {
     "SecretKey": "xrhzMQapbTXqHjAVPhvAvGGxVHpKSVZR",
